--- a/pruebagit.ipynb
+++ b/pruebagit.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:1bc688d1665b525142ea283c6f63aac13e63e586a6da4a7575f901624f296b2a"
+  "signature": "sha256:d5b0da34e750586525bed8bd2e9e4a322ab44a624d44b193ec1552263c06c73e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -10,14 +10,12 @@
   {
    "cells": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "notebook de prueba para git"
-     ],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Hola parce (:"
+     ]
     }
    ],
    "metadata": {}
