--- a/testnb.ipynb
+++ b/testnb.ipynb
@@ -1,8 +1,9 @@
 {
  "metadata": {
+  "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:ed76cccd45fcce70b140d4df9a7c1dd3e51184d20543808a9220d5611c1e0148"
+  "signature": "sha256:cf72d8b8df216cc1c0f02c7fca6b9b1a8dce9d9fc6a40d0aa1f8655a0bc8c7fb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -11,7 +12,11 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Estos es el notebook donde realizamos los tests para nuetro c\u00f3digo. Nuestros tests deb\u00edan contener purebas para intravlos en general, pero tambip\u00e9n para intervalos complejos.\n",
       "\n",
@@ -25,7 +30,11 @@
       "include(\"testdft.jl\")"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "outputs": [
       {
        "output_type": "stream",
@@ -62,13 +71,63 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "delayed_handler (generic function with 4 methods)"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ipython nbconvert testnb.ipynb --to slides"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "LoadError",
+       "evalue": "syntax: extra token \"nbconvert\" after end of expression\nwhile loading In[7], in expression starting on line 1",
+       "output_type": "pyerr",
+       "traceback": [
+        "syntax: extra token \"nbconvert\" after end of expression\nwhile loading In[7], in expression starting on line 1",
+        ""
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Pkg.add(\"nbconvert\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "LoadError",
+       "evalue": "unknown package nbconvert\nwhile loading In[11], in expression starting on line 1",
+       "output_type": "pyerr",
+       "traceback": [
+        "unknown package nbconvert\nwhile loading In[11], in expression starting on line 1",
+        "",
+        " in wait at task.jl:51",
+        " in sync_end at task.jl:311",
+        " in add at pkg/entry.jl:319",
+        " in add at pkg/entry.jl:71",
+        " in anonymous at pkg/dir.jl:28",
+        " in cd at file.jl:30",
+        " in cd at pkg/dir.jl:28",
+        " in add at pkg.jl:20"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
