pruebas para los intervalos complejos

--- a/testnb.ipynb
+++ b/testnb.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:f9c0f91e15488aabf57249912c71f498f7e54d7437fdec9b72047ab82b1d0ddc"
+  "signature": "sha256:4a8b6046e1c1614e7c2941428d372bfbe8080431a4298f66606ec426bce0b2d9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
       }
      },
      "source": [
-      "Estos es el notebook donde realizamos los tests para nuetro c\u00f3digo. Nuestros tests deb\u00edan contener purebas para intravlos en general, pero tambip\u00e9n para intervalos complejos.\n",
+      "Este es el notebook donde realizamos los tests para nuetro c\u00f3digo. Nuestros tests deb\u00edan contener purebas para intravlos en general, pero tambip\u00e9n para intervalos complejos.\n",
       "\n",
       "Decidimos ponerlo aparte para no mezclarlo con el notebook donde explicamos la DFT."
      ]
