--- a/seriesdefourier.ipynb
+++ b/seriesdefourier.ipynb
@@ -2,13 +2,22 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:2dbd8880c9d334172fe0c9620d99da3cb60dfd3519c51423ae2ec826b00369ca"
+  "signature": "sha256:77c571be93a08a1a90034aa4a5354f5b64a265fb8a14af9a8014c327dd023a6e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Autores: Laura P\u00e9rez Garc\u00eda, Oscar L\u00f3pez Hern\u00e1ndez\n",
+      "\n",
+      "------------------"
+     ]
+    },
     {
      "cell_type": "heading",
      "level": 1,
