reordene la presentacion

--- a/seriesdefourier-pres.ipynb
+++ b/seriesdefourier-pres.ipynb
@@ -3,7 +3,7 @@
   "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:170ec27206a5f73816d8e4827de9c17d0da3a83bede156b20c2b35c522bfc86b"
+  "signature": "sha256:9130fecbed7d818fe5ddd685f6893540e202b466657804ac434b64c4f0de7ea7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -71,7 +71,7 @@
       "\n",
       "\n",
       "\n",
-      "1) Generar y leer  una se\u00f1al, cuadrado, diente de sierra, o una se\u00f1al arbitraria peri\u00f3dica definida en intervalos.\n",
+      "1) Generar y leer una se\u00f1al, cuadrado, diente de sierra, o una se\u00f1al arbitraria peri\u00f3dica definida en intervalos.\n",
       "\n",
       "3) Realizar las sumas y productos definidas para  $X(k)$. \n",
       "\n",
@@ -102,9 +102,7 @@
       "\n",
       "La idea es que despu\u00e9s de aplicar la DFT se recuperen dichas frecuencias.\n",
       "\n",
-      "Adicionalmente la funci\u00f3n que genera la prueba a\u00f1ade un ruido aleatorio a la se\u00f1al, simulando lo que se obtendr\u00eda en el laboratorio.\n",
-      "\n",
-      "A continuaci\u00f3n se muestra la funci\u00f3n que genera el conjunto de datos del que se est\u00e1 hablando. "
+      "Adicionalmente la funci\u00f3n que genera la prueba a\u00f1ade un ruido aleatorio a la se\u00f1al, simulando lo que se obtendr\u00eda en el laboratorio."
      ]
     },
     {
@@ -130,7 +128,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "outputs": [
@@ -159,20 +157,7 @@
       "\n",
       "- La segunda entrada del output es un arreglo de *L* n\u00fameros que contiene la escala de tiempo de la se\u00f1al, el eje x.\n",
       "\n",
-      "- La tercera entrada del output es un arreglo de *L* n\u00fameros que contiene los datos del eje y de la se\u00f1al. \n",
-      "\n",
-      "De esta manera se guardan todos los datos necesarios para llevar a cabo la DFT y su correspondiente gr\u00e1fica, en un solo arreglo."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "Utilizando los par\u00e1metros de $F=1000$ y $L=1000$ se obtiene el siguiente conjunto de datos y se grafican para lograr visualizar el tipo de se\u00f1ales prueba que se generan."
+      "- La tercera entrada del output es un arreglo de *L* n\u00fameros que contiene los datos del eje y de la se\u00f1al. "
      ]
     },
     {
@@ -205,6 +190,17 @@
      "prompt_number": 2
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "La se\u00f1al resultante es la siguiente:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -214,7 +210,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "fragment"
       }
      },
      "outputs": [
@@ -253,7 +249,7 @@
       }
      },
      "source": [
-      "Ahora defino una funci\u00f3n auxiliar para la DFT:"
+      "Ahora defino una funci\u00f3n auxiliar para la DFT, que lo que hace es caclular el elemento k-\u00e9simo $$\\Sigma_{j=1}^{N} x(j) w_N^{(j-1)(k-1)} $$"
      ]
     },
     {
@@ -269,7 +265,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "outputs": [
@@ -292,7 +288,7 @@
       }
      },
      "source": [
-      "Y en base a esta funci\u00f3n se define la DFT."
+      "Y en base a esta funci\u00f3n se define la DFT, que ordena en una serie de datos a cada uno de los elementos calculados por TFY."
      ]
     },
     {
@@ -312,7 +308,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "-"
       }
      },
      "outputs": [
@@ -347,7 +343,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "outputs": [
@@ -390,7 +386,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Para obtener la gr\u00e1fica que nos dir\u00e1 donde se encuentran las componentes en frecuencia de la se\u00f1al de prueba, es necesario sacar la norma de cada uno de los elementos del arreglo anterior. "
      ]
@@ -461,7 +461,11 @@
       "graficar_DFT(D)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -492,7 +496,11 @@
     {
      "cell_type": "heading",
      "level": 2,
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "2. DFT para intervalos."
      ]
@@ -865,7 +873,7 @@
      "collapsed": false,
      "input": [
       "F=norma_dft(DFT(D))\n",
-      "D2=conversion_inter_del2(D,0.001,0.01)\n",
+      "D2=conversion_inter_del(D,0.001,0.01)\n",
       "R=norma_inter(DFT(D2));"
      ],
      "language": "python",
