--- a/seriesdefourier-pres.ipynb
+++ b/seriesdefourier-pres.ipynb
@@ -3,7 +3,7 @@
   "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:9130fecbed7d818fe5ddd685f6893540e202b466657804ac434b64c4f0de7ea7"
+  "signature": "sha256:e424283e82ee7a3beba093628a88757209bfb3eef0b45ac2326470c5b29c8beb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -41,7 +41,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "source": [
@@ -507,7 +507,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Al realizar la DFT utilizamos las ra\u00edces  n-\u00e9simas de la unidad en el plano complejo. De modo que a fin de obtener la DFT para intervalos debemos ser capaces de tener definidos Intervalos Complejos. Para esto realizamos un m\u00f3dulo en el que se define el tipo IC el cual esta formado por un objeto R (parte real) y otro I (parte imaginaria). La idea es que en cada uno de estos objetos pueda haber un intervalo.\n",
       "\n",
@@ -549,7 +553,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "1. Generar una se\u00f1al a analizar cuya serie de datos  \"y\" est\u00e9n formados por intervalos.  Para esto generaremos los datos en la forma dada para flotantes  y luego la entrada se mandar\u00e1 a su forma como intervalo."
      ]
@@ -563,13 +571,21 @@
       "D=sin_ruido(F, F);"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
      "outputs": [],
      "prompt_number": 12
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "La siguiente funci\u00f3n expresar\u00e1 la entrada \"y\" de los datos (D[3]) como intervalo."
      ]
@@ -615,7 +631,11 @@
       "D2=conversion_inter(D)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -633,7 +653,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "source": [
       "A continuaci\u00f3n mostramos una de la entradas del conjunto de datos, ya como intervalo."
      ]
@@ -645,7 +669,11 @@
       "D2[3][40] "
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -660,7 +688,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Lo siguiente es visualizar estos resultados en una gr\u00e1fica. Primero es necesario sacar la norma de cada uno de los intervalos complejos en el resultado de la DFT. Esto se hace con la siguiente funci\u00f3n auxiliar:"
      ]
@@ -761,7 +793,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Esta \u00faltima funci\u00f3n genera intervalos entre los que se hallan las normas de Transformada Discreta de Fourier. Al graficarla debemos obtener una gr\u00e1fica muy parecida a la que obtuvimos para flotantes, donde recuperabamos las frecuencias introducidas a la se\u00f1al de  prueba, pero definida en un rango dado por la longitud de los intervalos."
      ]
@@ -796,21 +832,33 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "Recuperamos la gr\u00e1fica obtenida para flotantes, con una variaci\u00f3n muy peque\u00f1a entre las normas de los valores de DFT."
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "Sin embargo, la curva superior e inferior coinciden casi exactamente punto a punto. Esto se debe a que al momento de **intervalizar** la se\u00f1al el proceso de intervalizacion lo realiza con un rango dado por los dos flotantes mas cercanos al valor dado por la se\u00f1al, que en realidad es un valor muy cercano a cero."
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Hasta este punto podemos decir que los resultados obtenidos  para calcular la DFT al trabajar con flotantes o con intervalos coinciden bastante.\n",
       "\n",
@@ -825,7 +873,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Esta primera funci\u00f3n **intervaliza** la se\u00f1al escogiendo la norma del intervalo dado, que debe de ser la m\u00ednima escala de aparato de medici\u00f3n (tanto en x como en y)."
      ]
@@ -863,7 +915,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Ya con los datos en t\u00e9rminos de intervalos, se procede realizar la gr\u00e1fica."
      ]
@@ -877,7 +933,11 @@
       "R=norma_inter(DFT(D2));"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [],
      "prompt_number": 72
     },
@@ -911,7 +971,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "La gr\u00e1fica de los intervalos se ve de la siguiente manera:"
      ]
