--- a/seriesdefourier-pres.ipynb
+++ b/seriesdefourier-pres.ipynb
@@ -3,7 +3,7 @@
   "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:e424283e82ee7a3beba093628a88757209bfb3eef0b45ac2326470c5b29c8beb"
+  "signature": "sha256:baa849a9587f9e8236426a2d43c19f81b3d06c8ccf02c5449a821f903a6aa2cf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -559,7 +559,7 @@
       }
      },
      "source": [
-      "1. Generar una se\u00f1al a analizar cuya serie de datos  \"y\" est\u00e9n formados por intervalos.  Para esto generaremos los datos en la forma dada para flotantes  y luego la entrada se mandar\u00e1 a su forma como intervalo."
+      "Generar una se\u00f1al a analizar cuya serie de datos  \"y\" est\u00e9n formados por intervalos.  Para esto generaremos los datos en la forma dada para flotantes  y luego la entrada se mandar\u00e1 a su forma como intervalo."
      ]
     },
     {
@@ -568,7 +568,7 @@
      "input": [
       "F=1000\n",
       "L=1000\n",
-      "D=sin_ruido(F, F);"
+      "D=sin_ruido(F, L);"
      ],
      "language": "python",
      "metadata": {
