--- a/seriesdefourier-pres.ipynb
+++ b/seriesdefourier-pres.ipynb
@@ -3,7 +3,7 @@
   "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:baa849a9587f9e8236426a2d43c19f81b3d06c8ccf02c5449a821f903a6aa2cf"
+  "signature": "sha256:14578a994d85a0aa2d3f2438158ff7f9b7890b5a4db90bd1c51ec3f52675e714"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -573,7 +573,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "skip"
+       "slide_type": "-"
       }
      },
      "outputs": [],
@@ -583,7 +583,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "source": [
