--- a/seriesdefourier-pres.ipynb
+++ b/seriesdefourier-pres.ipynb
@@ -3,7 +3,7 @@
   "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:14578a994d85a0aa2d3f2438158ff7f9b7890b5a4db90bd1c51ec3f52675e714"
+  "signature": "sha256:214c1b3f6cb9ba087e157f1d223df5c7642efad066b811c942a2a200c2ca6ae0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -750,7 +750,11 @@
       "end"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -795,7 +799,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "source": [
@@ -809,7 +813,11 @@
       "graficar_cotas(conversion_inter(D))"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
