--- a/seriesdefourier-pres.ipynb
+++ b/seriesdefourier-pres.ipynb
@@ -3,7 +3,7 @@
   "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:214c1b3f6cb9ba087e157f1d223df5c7642efad066b811c942a2a200c2ca6ae0"
+  "signature": "sha256:4808e2936fbc4fbd7444dcf51f71e338accb2dbfe909a42e67bdd0daf8d694f7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -870,7 +870,7 @@
      "source": [
       "Hasta este punto podemos decir que los resultados obtenidos  para calcular la DFT al trabajar con flotantes o con intervalos coinciden bastante.\n",
       "\n",
-      "\u00bfque otro uso podemos darle a nuestro programa adem\u00e1s de la comprobaci\u00f3n de los c\u00e1lculos con flotantes?\n",
+      "\u00bfQu\u00e9 otro uso podemos darle a nuestro programa adem\u00e1s de la comprobaci\u00f3n de los c\u00e1lculos con flotantes?\n",
       "\n",
       "Pensamos que el trabajar con intervalos es semejante a la manera en que se manejan las incertidumbres en en an\u00e1lisis de datos experimentales.\n",
       "\n",
