--- a/seriesdefourier-pres.ipynb
+++ b/seriesdefourier-pres.ipynb
@@ -3,7 +3,7 @@
   "celltoolbar": "Slideshow",
   "language": "Julia",
   "name": "",
-  "signature": "sha256:4808e2936fbc4fbd7444dcf51f71e338accb2dbfe909a42e67bdd0daf8d694f7"
+  "signature": "sha256:dbde2a548041a0e0e706b8c3f46d5ad2a167b93420d1d4c270ce8e1e6d87258b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -846,18 +846,7 @@
       }
      },
      "source": [
-      "Recuperamos la gr\u00e1fica obtenida para flotantes, con una variaci\u00f3n muy peque\u00f1a entre las normas de los valores de DFT."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "-"
-      }
-     },
-     "source": [
-      "Sin embargo, la curva superior e inferior coinciden casi exactamente punto a punto. Esto se debe a que al momento de **intervalizar** la se\u00f1al el proceso de intervalizacion lo realiza con un rango dado por los dos flotantes mas cercanos al valor dado por la se\u00f1al, que en realidad es un valor muy cercano a cero."
+      "La curva superior e inferior coinciden casi exactamente punto a punto. Esto se debe a que al momento de **intervalizar** la se\u00f1al el proceso de intervalizacion lo realiza con un rango dado por los dos flotantes mas cercanos al valor dado por la se\u00f1al, que en realidad es un valor muy cercano a cero."
      ]
     },
     {
@@ -978,24 +967,17 @@
      "prompt_number": 75
     },
     {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "La gr\u00e1fica de los intervalos se ve de la siguiente manera:"
-     ]
-    },
-    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "graficar_cuadros(F,D2,R)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -1010,12 +992,29 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
-      "En la gr\u00e1fica anterior las curvas azules \u00fanicamente son gu\u00edas para saber como es la forma de la transformada de Fourier. Los cuadros azules representan los intervalos que se obtienen con la DFT.\n",
       "\n",
       "Los dos cuadrados azules que se encuentran en las frecuencias 50 y 120 son el resultado buscado. Contienen la informaci\u00f3n de las frecuencias e amplitudes relativas que componen a la se\u00f1al. La informaci\u00f3n que brindan no es una aproximaci\u00f3n al valor real sino un intervalo dentro del cual se encuentra el resultado. Esta es la parte que es de suma importancia en el an\u00e1lisis de datos, donde no se tiene un valor definitivo sino un intervalo de error dentro del cual est\u00e1 el resultado."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "FIN"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": []
     }
    ],
    "metadata": {}
